--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 			// Настройка тем
 			if (telegram.themeParams.bg_color) {
+				document.body.style.color = telegram.themeParams.text_color;
 				document.body.style.backgroundColor = telegram.themeParams.bg_color;
 			}
 		});
